--- a/src/style/input.css
+++ b/src/style/input.css
@@ -4,38 +4,31 @@
 
 @layer base{
     @font-face {
-        font-family: 'Yekan';
-        font-weight: 100;
-        src: url(../assets/fonts/Yekan-Bakh-Light.ttf);
+        font-family: 'iran-sans';
+        src: url(../assets/fonts/IRANSansXV.woff2);
+        font-weight: 100 900;
+        font-style: normal;
+        font-display: swap;
     }
-    
+
     @font-face {
-        font-family: 'Yekan';
-        font-weight: 300;
-        src: url(../assets/fonts/Yekan-Bakh-Regular.ttf);
+        font-family: 'modam';
+        src: url(../assets/fonts/ModamVF.woff2);
+        font-weight: 100 900;
+        font-style: normal;
+        font-display: swap;
     }
-    
-    @font-face {
-        font-family: 'Yekan'; 
-        font-weight: 400;
-        src: url(../assets/fonts/Yekan-Bakh-Medium.ttf);
+
+    h1, h2, h3{
+        font-family: 'modam'
     }
-    
-    @font-face {
-        font-family: 'Yekan';
-        font-weight: 500;
-        src: url(../assets/fonts/Yekan-Bakh-Bold.ttf);
+    p, button, a, .btn{
+        font-family: 'iran-sans';
     }
-    
-    @font-face {
-        font-family: 'Yekan';
-        font-weight: 700;
-        src: url(../assets/fonts/Yekan-Bakh-Heavy.ttf);
-    }
-    
-    @font-face {
-        font-family: 'Yekan';
-        font-weight: 900;
-        src: url(../assets/fonts/Yekan-Bakh-Fat.ttf);
+
+    html {
+        -moz-font-feature-settings: "ss01";
+        -webkit-font-feature-settings: "ss01";
+        font-feature-settings: "ss01";
     }
 }
