--- a/src/style/output.css
+++ b/src/style/output.css
@@ -651,51 +651,39 @@ html {
 }
 
 @font-face {
-  font-family: 'Yekan';
+  font-family: 'iran-sans';
 
-  font-weight: 100;
+  src: url(../assets/fonts/IRANSansXV.woff2);
 
-  src: url(../assets/fonts/Yekan-Bakh-Light.ttf);
+  font-weight: 100 900;
+
+  font-style: normal;
+
+  font-display: swap;
 }
 
 @font-face {
-  font-family: 'Yekan';
+  font-family: 'modam';
 
-  font-weight: 300;
+  src: url(../assets/fonts/ModamVF.woff2);
 
-  src: url(../assets/fonts/Yekan-Bakh-Regular.ttf);
+  font-weight: 100 900;
+
+  font-style: normal;
+
+  font-display: swap;
 }
 
-@font-face {
-  font-family: 'Yekan';
-
-  font-weight: 400;
-
-  src: url(../assets/fonts/Yekan-Bakh-Medium.ttf);
+h1, h2, h3{
+  font-family: 'modam'
 }
 
-@font-face {
-  font-family: 'Yekan';
-
-  font-weight: 500;
-
-  src: url(../assets/fonts/Yekan-Bakh-Bold.ttf);
+p, button, a, .btn{
+  font-family: 'iran-sans';
 }
 
-@font-face {
-  font-family: 'Yekan';
-
-  font-weight: 700;
-
-  src: url(../assets/fonts/Yekan-Bakh-Heavy.ttf);
-}
-
-@font-face {
-  font-family: 'Yekan';
-
-  font-weight: 900;
-
-  src: url(../assets/fonts/Yekan-Bakh-Fat.ttf);
+html {
+  font-feature-settings: "ss01";
 }
 
 *, ::before, ::after {
@@ -804,40 +792,6 @@ html {
   --tw-contain-layout:  ;
   --tw-contain-paint:  ;
   --tw-contain-style:  ;
-}
-
-.container {
-  width: 100%;
-}
-
-@media (min-width: 640px) {
-  .container {
-    max-width: 640px;
-  }
-}
-
-@media (min-width: 768px) {
-  .container {
-    max-width: 768px;
-  }
-}
-
-@media (min-width: 1024px) {
-  .container {
-    max-width: 1024px;
-  }
-}
-
-@media (min-width: 1280px) {
-  .container {
-    max-width: 1280px;
-  }
-}
-
-@media (min-width: 1536px) {
-  .container {
-    max-width: 1536px;
-  }
 }
 
 .avatar.placeholder > div {
@@ -2100,6 +2054,34 @@ details.collapse summary::-webkit-details-marker {
       var(--handleoffsetcalculator) 0 0 3px var(--fallback-bc,oklch(var(--bc)/1)) inset;
 }
 
+.btn-xs {
+  height: 1.5rem;
+  min-height: 1.5rem;
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+  font-size: 0.75rem;
+}
+
+.btn-sm {
+  height: 2rem;
+  min-height: 2rem;
+  padding-left: 0.75rem;
+  padding-right: 0.75rem;
+  font-size: 0.875rem;
+}
+
+.btn-square:where(.btn-xs) {
+  height: 1.5rem;
+  width: 1.5rem;
+  padding: 0px;
+}
+
+.btn-square:where(.btn-sm) {
+  height: 2rem;
+  width: 2rem;
+  padding: 0px;
+}
+
 .btn-circle:where(.btn-xs) {
   height: 1.5rem;
   width: 1.5rem;
@@ -2261,6 +2243,11 @@ details.collapse summary::-webkit-details-marker {
   margin-bottom: -0.5rem;
 }
 
+.mx-1 {
+  margin-left: 0.25rem;
+  margin-right: 0.25rem;
+}
+
 .-mt-10 {
   margin-top: -2.5rem;
 }
@@ -2297,6 +2284,10 @@ details.collapse summary::-webkit-details-marker {
   display: grid;
 }
 
+.hidden {
+  display: none;
+}
+
 .h-1 {
   height: 0.25rem;
 }
@@ -2311,6 +2302,14 @@ details.collapse summary::-webkit-details-marker {
 
 .h-32 {
   height: 8rem;
+}
+
+.h-40 {
+  height: 10rem;
+}
+
+.h-48 {
+  height: 12rem;
 }
 
 .h-52 {
@@ -2349,16 +2348,8 @@ details.collapse summary::-webkit-details-marker {
   min-height: 400px;
 }
 
-.w-1\/3 {
-  width: 33.333333%;
-}
-
 .w-14 {
   width: 3.5rem;
-}
-
-.w-16 {
-  width: 4rem;
 }
 
 .w-32 {
@@ -2377,8 +2368,8 @@ details.collapse summary::-webkit-details-marker {
   width: 13rem;
 }
 
-.w-\[140px\] {
-  width: 140px;
+.w-8 {
+  width: 2rem;
 }
 
 .w-\[90\%\] {
@@ -2391,6 +2382,10 @@ details.collapse summary::-webkit-details-marker {
 
 .min-w-\[300px\] {
   min-width: 300px;
+}
+
+.max-w-48 {
+  max-width: 12rem;
 }
 
 .max-w-\[140px\] {
@@ -2407,6 +2402,10 @@ details.collapse summary::-webkit-details-marker {
 
 .max-w-\[350px\] {
   max-width: 350px;
+}
+
+.max-w-\[400px\] {
+  max-width: 400px;
 }
 
 .max-w-xs {
@@ -2426,8 +2425,16 @@ details.collapse summary::-webkit-details-marker {
   cursor: pointer;
 }
 
+.grid-cols-1 {
+  grid-template-columns: repeat(1, minmax(0, 1fr));
+}
+
 .grid-cols-2 {
   grid-template-columns: repeat(2, minmax(0, 1fr));
+}
+
+.grid-cols-3 {
+  grid-template-columns: repeat(3, minmax(0, 1fr));
 }
 
 .flex-col {
@@ -2436,10 +2443,6 @@ details.collapse summary::-webkit-details-marker {
 
 .items-center {
   align-items: center;
-}
-
-.justify-start {
-  justify-content: flex-start;
 }
 
 .justify-center {
@@ -2712,11 +2715,6 @@ details.collapse summary::-webkit-details-marker {
   padding-right: 4rem;
 }
 
-.px-20 {
-  padding-left: 5rem;
-  padding-right: 5rem;
-}
-
 .px-3 {
   padding-left: 0.75rem;
   padding-right: 0.75rem;
@@ -2742,9 +2740,9 @@ details.collapse summary::-webkit-details-marker {
   padding-right: 2.25rem;
 }
 
-.px-\[30px\] {
-  padding-left: 30px;
-  padding-right: 30px;
+.px-\[31px\] {
+  padding-left: 31px;
+  padding-right: 31px;
 }
 
 .py-10 {
@@ -2888,6 +2886,11 @@ details.collapse summary::-webkit-details-marker {
   color: rgb(0 0 0 / var(--tw-text-opacity));
 }
 
+.text-\[\#2d6ab9\] {
+  --tw-text-opacity: 1;
+  color: rgb(45 106 185 / var(--tw-text-opacity));
+}
+
 .text-\[\#FFA280\] {
   --tw-text-opacity: 1;
   color: rgb(255 162 128 / var(--tw-text-opacity));
@@ -2986,11 +2989,177 @@ details.collapse summary::-webkit-details-marker {
     order: 2;
   }
 
-  .lg\:w-1\/3 {
-    width: 33.333333%;
-  }
-
   .lg\:flex-row {
     flex-direction: row;
+  }
+}
+
+@media (min-width: 1280px) {
+  .xl\:order-1 {
+    order: 1;
+  }
+
+  .xl\:order-2 {
+    order: 2;
+  }
+
+  .xl\:block {
+    display: block;
+  }
+
+  .xl\:flex {
+    display: flex;
+  }
+
+  .xl\:hidden {
+    display: none;
+  }
+
+  .xl\:h-16 {
+    height: 4rem;
+  }
+
+  .xl\:h-52 {
+    height: 13rem;
+  }
+
+  .xl\:h-72 {
+    height: 18rem;
+  }
+
+  .xl\:w-44 {
+    width: 11rem;
+  }
+
+  .xl\:w-\[40\%\] {
+    width: 40%;
+  }
+
+  .xl\:w-\[45\%\] {
+    width: 45%;
+  }
+
+  .xl\:max-w-\[300px\] {
+    max-width: 300px;
+  }
+
+  .xl\:grid-cols-2 {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+
+  .xl\:grid-cols-4 {
+    grid-template-columns: repeat(4, minmax(0, 1fr));
+  }
+
+  .xl\:grid-cols-6 {
+    grid-template-columns: repeat(6, minmax(0, 1fr));
+  }
+
+  .xl\:flex-row {
+    flex-direction: row;
+  }
+
+  .xl\:items-center {
+    align-items: center;
+  }
+
+  .xl\:justify-between {
+    justify-content: space-between;
+  }
+
+  .xl\:gap-20 {
+    gap: 5rem;
+  }
+
+  .xl\:p-14 {
+    padding: 3.5rem;
+  }
+
+  .xl\:px-16 {
+    padding-left: 4rem;
+    padding-right: 4rem;
+  }
+
+  .xl\:px-24 {
+    padding-left: 6rem;
+    padding-right: 6rem;
+  }
+
+  .xl\:px-52 {
+    padding-left: 13rem;
+    padding-right: 13rem;
+  }
+
+  .xl\:px-8 {
+    padding-left: 2rem;
+    padding-right: 2rem;
+  }
+
+  .xl\:px-\[10\%\] {
+    padding-left: 10%;
+    padding-right: 10%;
+  }
+
+  .xl\:px-\[58px\] {
+    padding-left: 58px;
+    padding-right: 58px;
+  }
+
+  .xl\:py-10 {
+    padding-top: 2.5rem;
+    padding-bottom: 2.5rem;
+  }
+
+  .xl\:py-14 {
+    padding-top: 3.5rem;
+    padding-bottom: 3.5rem;
+  }
+
+  .xl\:py-28 {
+    padding-top: 7rem;
+    padding-bottom: 7rem;
+  }
+
+  .xl\:py-32 {
+    padding-top: 8rem;
+    padding-bottom: 8rem;
+  }
+
+  .xl\:pb-14 {
+    padding-bottom: 3.5rem;
+  }
+
+  .xl\:pt-10 {
+    padding-top: 2.5rem;
+  }
+}
+
+@media (min-width: 1536px) {
+  .\32xl\:hidden {
+    display: none;
+  }
+
+  .\32xl\:w-\[30\%\] {
+    width: 30%;
+  }
+
+  .\32xl\:px-52 {
+    padding-left: 13rem;
+    padding-right: 13rem;
+  }
+
+  .\32xl\:px-\[15\%\] {
+    padding-left: 15%;
+    padding-right: 15%;
+  }
+
+  .\32xl\:px-\[30\%\] {
+    padding-left: 30%;
+    padding-right: 30%;
+  }
+
+  .\32xl\:py-16 {
+    padding-top: 4rem;
+    padding-bottom: 4rem;
   }
 }
