--- a/src/style/output.css
+++ b/src/style/output.css
@@ -2054,26 +2054,12 @@ details.collapse summary::-webkit-details-marker {
       var(--handleoffsetcalculator) 0 0 3px var(--fallback-bc,oklch(var(--bc)/1)) inset;
 }
 
-.btn-xs {
-  height: 1.5rem;
-  min-height: 1.5rem;
-  padding-left: 0.5rem;
-  padding-right: 0.5rem;
-  font-size: 0.75rem;
-}
-
 .btn-sm {
   height: 2rem;
   min-height: 2rem;
   padding-left: 0.75rem;
   padding-right: 0.75rem;
   font-size: 0.875rem;
-}
-
-.btn-square:where(.btn-xs) {
-  height: 1.5rem;
-  width: 1.5rem;
-  padding: 0px;
 }
 
 .btn-square:where(.btn-sm) {
@@ -2186,6 +2172,10 @@ details.collapse summary::-webkit-details-marker {
   visibility: collapse;
 }
 
+.fixed {
+  position: fixed;
+}
+
 .absolute {
   position: absolute;
 }
@@ -2214,12 +2204,80 @@ details.collapse summary::-webkit-details-marker {
   top: 2.25rem;
 }
 
+.left-0 {
+  left: 0px;
+}
+
+.top-14 {
+  top: 3.5rem;
+}
+
+.right-0 {
+  right: 0px;
+}
+
+.right-40 {
+  right: 10rem;
+}
+
+.right-20 {
+  right: 5rem;
+}
+
+.right-32 {
+  right: 8rem;
+}
+
+.top-20 {
+  top: 5rem;
+}
+
+.right-6 {
+  right: 1.5rem;
+}
+
+.right-64 {
+  right: 16rem;
+}
+
+.-right-0 {
+  right: -0px;
+}
+
+.-right-1 {
+  right: -0.25rem;
+}
+
+.right-8 {
+  right: 2rem;
+}
+
+.right-96 {
+  right: 24rem;
+}
+
+.right-80 {
+  right: 20rem;
+}
+
+.right-\[80\] {
+  right: 80;
+}
+
+.right-\[22em\] {
+  right: 22em;
+}
+
 .z-20 {
   z-index: 20;
 }
 
 .z-\[1\] {
   z-index: 1;
+}
+
+.z-30 {
+  z-index: 30;
 }
 
 .order-1 {
@@ -2336,6 +2394,18 @@ details.collapse summary::-webkit-details-marker {
   height: 100%;
 }
 
+.h-0 {
+  height: 0px;
+}
+
+.h-8 {
+  height: 2rem;
+}
+
+.h-16 {
+  height: 4rem;
+}
+
 .max-h-36 {
   max-height: 9rem;
 }
@@ -2380,6 +2450,26 @@ details.collapse summary::-webkit-details-marker {
   width: 100%;
 }
 
+.w-0 {
+  width: 0px;
+}
+
+.w-4 {
+  width: 1rem;
+}
+
+.w-40 {
+  width: 10rem;
+}
+
+.w-80 {
+  width: 20rem;
+}
+
+.w-60 {
+  width: 15rem;
+}
+
 .min-w-\[300px\] {
   min-width: 300px;
 }
@@ -2410,6 +2500,18 @@ details.collapse summary::-webkit-details-marker {
 
 .max-w-xs {
   max-width: 20rem;
+}
+
+.max-w-8 {
+  max-width: 2rem;
+}
+
+.max-w-16 {
+  max-width: 4rem;
+}
+
+.max-w-14 {
+  max-width: 3.5rem;
 }
 
 .-translate-y-1\/2 {
@@ -2443,6 +2545,10 @@ details.collapse summary::-webkit-details-marker {
 
 .items-center {
   align-items: center;
+}
+
+.justify-end {
+  justify-content: flex-end;
 }
 
 .justify-center {
@@ -2507,6 +2613,10 @@ details.collapse summary::-webkit-details-marker {
   overflow-x: auto;
 }
 
+.overflow-y-hidden {
+  overflow-y: hidden;
+}
+
 .rounded-2xl {
   border-radius: 1rem;
 }
@@ -2552,6 +2662,11 @@ details.collapse summary::-webkit-details-marker {
 .border-x-4 {
   border-left-width: 4px;
   border-right-width: 4px;
+}
+
+.border-y {
+  border-top-width: 1px;
+  border-bottom-width: 1px;
 }
 
 .border-b {
@@ -2705,6 +2820,10 @@ details.collapse summary::-webkit-details-marker {
   padding: 1.75rem;
 }
 
+.p-1 {
+  padding: 0.25rem;
+}
+
 .px-14 {
   padding-left: 3.5rem;
   padding-right: 3.5rem;
@@ -2838,6 +2957,10 @@ details.collapse summary::-webkit-details-marker {
 
 .pt-7 {
   padding-top: 1.75rem;
+}
+
+.pr-2 {
+  padding-right: 0.5rem;
 }
 
 .text-center {
